package Model;

public enum UserType {
    ALUNO,
    TREINADOR;
}
